# collider

./: .gitignore  Cargo.toml
collider-core/: Cargo.toml
collider-core/src/: any.rs  component.rs  database.rs  id.rs  indexing.rs  lib.rs  mapping.rs  results.rs  select.rs  tyid.rs
collider-proc/: Cargo.toml
collider-proc/src/: lib.rs  selection.rs
src/: borrowed.rs  column.rs  components.rs  comps.rs  conflict.rs  database.rs  db.rs  entity.rs  error.rs  family.rs  id.rs  indexing.rs  indexing_macros.rs  lib.rs  macros.rs  mapping.rs  scratch.rs  table.rs  test.rs  transfer.rs  transform.rs  transformation_macros.rs  xform.rs
src/deprecated_src/: db.rs
src/indexes/: spatial.rs
tests/: example_bouncing_ball.rs  example_rocket_launch.rs  example_vehicle_race.rs
