[package]
name = "collider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collider-core = { path = "collider-core" }
collider-proc = { path = "collider-proc" }
dashmap = { version="5.5.3", features=["raw-api"] }
integrator = "0.1.2"
itertools = "0.12.0"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"